# sedp_exercise6

native-module-python/: _pi_cffi.c  build.sh  create_lib.py  main.py  process.cpp  test  test.cpp
script-embedding-python/: CMakeLists.txt  main.cpp
